Added more tests. Completed addition of synchronized and asynchronized logging