@@ -1,4 +1,4 @@
-package dev.prodzeus.logger.event.log;
+package dev.prodzeus.logger.event.events.log;
 
 import dev.prodzeus.logger.Level;
 import dev.prodzeus.logger.Logger;
@@ -11,31 +11,14 @@ public class TraceLogEvent extends GenericLogEvent {
 
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final Collection<Marker> marker, @NotNull final String log, @NotNull final Collection<Object> args) {
         super(logger, Level.TRACE, marker, log, args);
-        fireEvent(this);
-    }
-
-    public TraceLogEvent(@NotNull final Logger logger, @NotNull final Marker marker, @NotNull final String log, @NotNull final Collection<Object> args) {
-        this(logger, Set.of(marker), log, args);
-    }
-
-    public TraceLogEvent(@NotNull final Logger logger, @NotNull final String log, @NotNull final Collection<Object> args) {
-        this(logger, Collections.emptySet(), log, args);
-    }
-
-    public TraceLogEvent(@NotNull final Logger logger, @NotNull final Marker marker, @NotNull final String log, @NotNull final Object... args) {
-        this(logger, marker, log, Set.of(args));
     }
 
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final org.slf4j.Marker marker, @NotNull final String log, @NotNull final Object... args) {
-        this(logger, Marker.of(marker), log, args);
-    }
-
-    public TraceLogEvent(@NotNull final Logger logger, @NotNull final Marker marker, @NotNull final String log, @NotNull final Object arg) {
-        this(logger, marker, log, Set.of(arg));
+        this(logger, Set.of(Marker.of(marker)), log, Set.of(args));
     }
 
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final org.slf4j.Marker marker, @NotNull final String log, @NotNull final Object arg) {
-        this(logger, Marker.of(marker), log, Set.of(arg));
+        this(logger, Set.of(Marker.of(marker)), log, Set.of(arg));
     }
 
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final String log, @NotNull final Object... arg) {
@@ -46,15 +29,26 @@ public class TraceLogEvent extends GenericLogEvent {
         this(logger, Collections.emptySet(), log, Set.of(arg));
     }
 
-    public TraceLogEvent(@NotNull final Logger logger, @NotNull final Marker marker, @NotNull final String log) {
-        this(logger, marker, log, Collections.emptySet());
-    }
-
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final org.slf4j.Marker marker, @NotNull final String log) {
-        this(logger, Marker.of(marker), log, Collections.emptySet());
+        this(logger, Set.of(Marker.of(marker)), log, Collections.emptySet());
     }
 
     public TraceLogEvent(@NotNull final Logger logger, @NotNull final String log) {
         this(logger, Collections.emptySet(), log, Collections.emptySet());
+    }
+
+    @Override
+    public void fire() {
+        fireEvent(this);
+    }
+
+    @Override
+    public void fireSynchronized() {
+        fireEventSync(this);
+    }
+
+    @Override
+    public void fireAsync() {
+        fireEventAsync(this);
     }
 }
